Ders 3 bitti.